--- a/styles.css
+++ b/styles.css
@@ -21,17 +21,22 @@ body {
 }
 
 .principal {
-    background-image: url("img/benção11.png");
+    background-image: url("img/ruiva.jpeg");
     background-repeat: no-repeat;
     background-size: contain;
     align-items: center;
     text-align: center;
+    background-position: center; 
+    height: 100%;
+    width: 100%;
 }
 
 .container {
     height: 100vh;
     display: grid;
     grid-template-columns: 50% 50%;
+
+    
 }
 
 .container__botao {
