--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
 }
 
 .principal {
-    background-image: url("img/ruiva.jpeg");
+    background-image: url("ruiva.jpeg");
     background-repeat: no-repeat;
     background-size: contain;
     align-items: center;
